--- a/web/app.css
+++ b/web/app.css
@@ -1,6 +1,12 @@
 body{
   background-color: #d9d9d9;
 }
+
+table{
+  border-spacing: 6px;
+}
+table tbody tr, table tbody tr:nth-child(even){ background-color: #fff; }
+
 tr.salles th:nth-child(n+2){
   color: #9e8443;
   background-color: black;
@@ -11,10 +17,34 @@ tr.seances th{
   background: #fff url(images/background-calendrier.png) no-repeat center;
 }
 
+.none{
+  background: #d9d9d9 url(images/background-pas-de-seances.png) no-repeat center;
+}
+
+.booked{
+  background-color: #ebc27c;
+}
+
+.already_booked{
+  background-color: #c6c6c6;
+}
+
+.seance a{
+  cursor: default;
+}
+
+.seance button{
+  cursor: pointer;
+}
+
 .heure{
   background: url(images/picto-horaire.png) no-repeat;
   background-size: contain;
   padding-left: 20px;
+}
+
+.status{
+  display: inline-block;
 }
 
 .question{
